Added three varieties of halans

--- a/index.html
+++ b/index.html
@@ -11,37 +11,124 @@
 <div class="center">
 <div class="keyboard">
     <div class="KeyboardRow">
-        <span class="KeyboardKey">Q</span>
-        <span class="KeyboardKey">W</span>
-        <span class="KeyboardKey">E</span>
-        <span class="KeyboardKey">R</span>
-        <span class="KeyboardKey">T</span>
-        <span class="KeyboardKey">Y</span>
-        <span class="KeyboardKey">U</span>
-        <span class="KeyboardKey">I</span>
-        <span class="KeyboardKey">O</span>
-        <span class="KeyboardKey">P</span>
+        <span class="KeyboardKey">1</span>
+        <span class="KeyboardKey">2</span>
+        <span class="KeyboardKey">3</span>
+        <span class="KeyboardKey">4</span>
+        <span class="KeyboardKey">5</span>
+        <span class="KeyboardKey">6</span>
+        <span class="KeyboardKey">7</span>
+        <span class="KeyboardKey">8</span>
+        <span class="KeyboardKey">9</span>
+        <span class="KeyboardKey">0</span>
+        <span class="KeyboardKey">-</span>
+        <span class="KeyboardKey">/</span>
+        <span class="KeyboardKey">!</span>
     </div>
+
+    <span class="KeyboardKey">&#x2018;</span>
+    <span class="KeyboardKey">&#x2019;</span>
+    <span class="KeyboardKey">&#x201C;</span>
+    <span class="KeyboardKey">&#x201D;</span>
+    <span class="KeyboardKey">&#x091C;&#x094D;&#x091E;</span>
+    <span class="KeyboardKey">&#x0915;&#x094D;&#x0937;</span>
+    <span class="KeyboardKey">&#x0924;&#x094D;&#x200D;&#x0930;</span>
+    <span class="KeyboardKey">&#x0936;&#x094D;&#x200D;&#x0930;</span>
+    <span class="KeyboardKey">(</span>
+    <span class="KeyboardKey">)</span>
+    <span class="KeyboardKey">?</span>
+    <span class="KeyboardKey">:</span>
+
     <div class="KeyboardRow">
-        <span class="KeyboardKey">A</span>
-        <span class="KeyboardKey">S</span>
-        <span class="KeyboardKey">D</span>
-        <span class="KeyboardKey">F</span>
-        <span class="KeyboardKey">G</span>
-        <span class="KeyboardKey">H</span>
-        <span class="KeyboardKey">J</span>
-        <span class="KeyboardKey">K</span>
-        <span class="KeyboardKey">L</span>
+        <span class="KeyboardKey">&#x094C;</span>
+        <span class="KeyboardKey">&#x0948;</span>
+        <span class="KeyboardKey">&#x093E;</span>
+        <span class="KeyboardKey">&#x0940;</span>
+        <span class="KeyboardKey">&#x0942;</span>
+        <span class="KeyboardKey">&#x092C;</span>
+        <span class="KeyboardKey">&#x0939;</span>
+        <span class="KeyboardKey">&#x0917;</span>
+        <span class="KeyboardKey">&#x0926;</span>
+        <span class="KeyboardKey">&#x091C;</span>
+        <span class="KeyboardKey">&#x0921;</span>
+        <span class="KeyboardKey">&#x093C;</span>
     </div>
+
     <div class="KeyboardRow">
-        <span class="KeyboardKey">Z</span>
-        <span class="KeyboardKey">X</span>
-        <span class="KeyboardKey">C</span>
-        <span class="KeyboardKey">V</span>
-        <span class="KeyboardKey">B</span>
-        <span class="KeyboardKey">N</span>
-        <span class="KeyboardKey">M</span>
+        <span class="KeyboardKey">&#x0914;</span>
+        <span class="KeyboardKey">&#x0910;</span>
+        <span class="KeyboardKey">&#x0906;</span>
+        <span class="KeyboardKey">&#x0908;</span>
+        <span class="KeyboardKey">&#x090A;</span>
+        <span class="KeyboardKey">&#x092D;</span>
+        <span class="KeyboardKey">&#x0919;</span>
+        <span class="KeyboardKey">&#x0918;</span>
+        <span class="KeyboardKey">&#x0927;</span>
+        <span class="KeyboardKey">&#x091D;</span>
+        <span class="KeyboardKey">&#x0922;</span>
+        <span class="KeyboardKey">&#x0943;</span>
     </div>
+
+    <div class="KeyboardRow">
+        <span class="KeyboardKey">&#x094B;</span>
+        <span class="KeyboardKey">&#x0947;</span>
+        <span class="KeyboardKey">&#x094D;</span>
+        <span class="KeyboardKey">&#x200C;</span>
+        <span class="KeyboardKey">&#x093F;</span>
+        <span class="KeyboardKey">&#x0941;</span>
+        <span class="KeyboardKey">&#x092A;</span>
+        <span class="KeyboardKey">&#x0930;</span>
+        <span class="KeyboardKey">&#x0915;</span>
+        <span class="KeyboardKey">&#x0924;</span>
+        <span class="KeyboardKey">&#x091A;</span>
+        <span class="KeyboardKey">&#x091F;</span>
+    </div>
+    
+    <div class="KeyboardRow">
+        <span class="KeyboardKey">&#x0913;</span>
+        <span class="KeyboardKey">&#x090F;</span>
+        <span class="KeyboardKey">&#x0905;</span>
+        <span class="KeyboardKey">&#x0907;</span>
+        <span class="KeyboardKey">&#x0909;</span>
+        <span class="KeyboardKey">&#x092B;</span>
+        <span class="KeyboardKey">&#x0930;</span>
+        <span class="KeyboardKey">&#x0916;</span>
+        <span class="KeyboardKey">&#x0925;</span>
+        <span class="KeyboardKey">&#x091B;</span>
+        <span class="KeyboardKey">&#x0920;</span>
+        <span class="KeyboardKey">&#x0911;</span>
+    </div>
+
+    <div class="KeyboardRow">
+        <span class="KeyboardKey">&#x0902;</span>
+        <span class="KeyboardKey">&#x092E;</span>
+        <span class="KeyboardKey">&#x0928;</span>
+        <span class="KeyboardKey">&#x0935;</span>
+        <span class="KeyboardKey">&#x0932;</span>
+        <span class="KeyboardKey">&#x0938;</span>
+        <span class="KeyboardKey">&#x092F;</span>
+        <span class="KeyboardKey">.</span>
+        <span class="KeyboardKey">,</span>
+    </div>
+
+    <div class="KeyboardRow">
+        <span class="KeyboardKey">&#x0901;</span>
+        <span class="KeyboardKey">&#x0923;</span>
+        <span class="KeyboardKey">&#x091E;</span>
+        <span class="KeyboardKey">&#x0970;</span>
+        <span class="KeyboardKey">&#x0933;</span>
+        <span class="KeyboardKey">&#x0936;</span>
+        <span class="KeyboardKey">&#x0937;</span>
+        <span class="KeyboardKey">&#x090D;</span>
+        <span class="KeyboardKey">&#x0945;</span>
+    </div>
+
+    <div class="KeyboardRow">
+        <span class="KeyboardKey">&#x094D;</span>
+        <span class="KeyboardKey">&#x094D;&#x200D;</span>
+        <span class="KeyboardKey">&#x094D;&#x200D;</span>
+    </div>
+
     <div class="KeyboardRow">
         <span class="KeyboardKey clear">Clear</span>
     </div>
