Changed a couple of letters

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <span class="KeyboardKey">&#x201D;</span>
     <span class="KeyboardKey">&#x091C;&#x094D;&#x091E;</span>
     <span class="KeyboardKey">&#x0915;&#x094D;&#x0937;</span>
-    <span class="KeyboardKey">&#x0924;&#x094D;&#x200D;&#x0930;</span>
-    <span class="KeyboardKey">&#x0936;&#x094D;&#x200D;&#x0930;</span>
+    <span class="KeyboardKey">&#x0924;&#x094D;&#x0930;</span>
+    <span class="KeyboardKey">&#x0936;&#x094D;&#x0930;</span>
     <span class="KeyboardKey">(</span>
     <span class="KeyboardKey">)</span>
     <span class="KeyboardKey">?</span>
@@ -77,7 +77,7 @@
         <span class="KeyboardKey">&#x093F;</span>
         <span class="KeyboardKey">&#x0941;</span>
         <span class="KeyboardKey">&#x092A;</span>
-        <span class="KeyboardKey">&#x0930;</span>
+        <span class="KeyboardKey">&#x0930;&#x094D;</span>
         <span class="KeyboardKey">&#x0915;</span>
         <span class="KeyboardKey">&#x0924;</span>
         <span class="KeyboardKey">&#x091A;</span>
@@ -115,7 +115,7 @@
         <span class="KeyboardKey">&#x0901;</span>
         <span class="KeyboardKey">&#x0923;</span>
         <span class="KeyboardKey">&#x091E;</span>
-        <span class="KeyboardKey">&#x0970;</span>
+        <span class="KeyboardKey">*</span>
         <span class="KeyboardKey">&#x0933;</span>
         <span class="KeyboardKey">&#x0936;</span>
         <span class="KeyboardKey">&#x0937;</span>
