Added shift keys and its functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </div>
 <div class="center">
 <div class="keyboard">
-    <div class="KeyboardRow">
+    <div class="KeyboardRow nonshift">
         <span class="KeyboardKey">1</span>
         <span class="KeyboardKey">2</span>
         <span class="KeyboardKey">3</span>
@@ -26,20 +26,22 @@
         <span class="KeyboardKey">!</span>
     </div>
 
-    <span class="KeyboardKey">&#x2018;</span>
-    <span class="KeyboardKey">&#x2019;</span>
-    <span class="KeyboardKey">&#x201C;</span>
-    <span class="KeyboardKey">&#x201D;</span>
-    <span class="KeyboardKey">&#x091C;&#x094D;&#x091E;</span>
-    <span class="KeyboardKey">&#x0915;&#x094D;&#x0937;</span>
-    <span class="KeyboardKey">&#x0924;&#x094D;&#x0930;</span>
-    <span class="KeyboardKey">&#x0936;&#x094D;&#x0930;</span>
-    <span class="KeyboardKey">(</span>
-    <span class="KeyboardKey">)</span>
-    <span class="KeyboardKey">?</span>
-    <span class="KeyboardKey">:</span>
+    <div class="KeyboardRow shift">
+        <span class="KeyboardKey">&#x2018;</span>
+        <span class="KeyboardKey">&#x2019;</span>
+        <span class="KeyboardKey">&#x201C;</span>
+        <span class="KeyboardKey">&#x201D;</span>
+        <span class="KeyboardKey">&#x091C;&#x094D;&#x091E;</span>
+        <span class="KeyboardKey">&#x0915;&#x094D;&#x0937;</span>
+        <span class="KeyboardKey">&#x0924;&#x094D;&#x0930;</span>
+        <span class="KeyboardKey">&#x0936;&#x094D;&#x0930;</span>
+        <span class="KeyboardKey">(</span>
+        <span class="KeyboardKey">)</span>
+        <span class="KeyboardKey">?</span>
+        <span class="KeyboardKey">:</span>
+    </div>
 
-    <div class="KeyboardRow">
+    <div class="KeyboardRow nonshift">
         <span class="KeyboardKey">&#x094C;</span>
         <span class="KeyboardKey">&#x0948;</span>
         <span class="KeyboardKey">&#x093E;</span>
@@ -54,7 +56,7 @@
         <span class="KeyboardKey">&#x093C;</span>
     </div>
 
-    <div class="KeyboardRow">
+    <div class="KeyboardRow shift">
         <span class="KeyboardKey">&#x0914;</span>
         <span class="KeyboardKey">&#x0910;</span>
         <span class="KeyboardKey">&#x0906;</span>
@@ -69,11 +71,10 @@
         <span class="KeyboardKey">&#x0943;</span>
     </div>
 
-    <div class="KeyboardRow">
+    <div class="KeyboardRow nonshift">
         <span class="KeyboardKey">&#x094B;</span>
         <span class="KeyboardKey">&#x0947;</span>
         <span class="KeyboardKey">&#x094D;</span>
-        <span class="KeyboardKey">&#x200C;</span>
         <span class="KeyboardKey">&#x093F;</span>
         <span class="KeyboardKey">&#x0941;</span>
         <span class="KeyboardKey">&#x092A;</span>
@@ -84,7 +85,7 @@
         <span class="KeyboardKey">&#x091F;</span>
     </div>
     
-    <div class="KeyboardRow">
+    <div class="KeyboardRow shift">
         <span class="KeyboardKey">&#x0913;</span>
         <span class="KeyboardKey">&#x090F;</span>
         <span class="KeyboardKey">&#x0905;</span>
@@ -99,7 +100,8 @@
         <span class="KeyboardKey">&#x0911;</span>
     </div>
 
-    <div class="KeyboardRow">
+    <div class="KeyboardRow nonshift">
+        <span class="KeyboardKey shiftkey">Shift</span>
         <span class="KeyboardKey">&#x0902;</span>
         <span class="KeyboardKey">&#x092E;</span>
         <span class="KeyboardKey">&#x0928;</span>
@@ -109,9 +111,11 @@
         <span class="KeyboardKey">&#x092F;</span>
         <span class="KeyboardKey">.</span>
         <span class="KeyboardKey">,</span>
+        <span class="KeyboardKey shiftkey">Shift</span>
     </div>
 
-    <div class="KeyboardRow">
+    <div class="KeyboardRow shift">
+        <span class="KeyboardKey shiftkey">Shift</span>
         <span class="KeyboardKey">&#x0901;</span>
         <span class="KeyboardKey">&#x0923;</span>
         <span class="KeyboardKey">&#x091E;</span>
@@ -121,6 +125,7 @@
         <span class="KeyboardKey">&#x0937;</span>
         <span class="KeyboardKey">&#x090D;</span>
         <span class="KeyboardKey">&#x0945;</span>
+        <span class="KeyboardKey shiftkey">Shift</span>
     </div>
 
     <div class="KeyboardRow">
