Added del, bksp, enter. Made shift to return to normal after keypress

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <span class="KeyboardKey">-</span>
         <span class="KeyboardKey">/</span>
         <span class="KeyboardKey">!</span>
+        <span class="KeyboardKey bksp">Bksp</span>
     </div>
 
     <div class="KeyboardRow shift">
@@ -32,16 +33,19 @@
         <span class="KeyboardKey">&#x201C;</span>
         <span class="KeyboardKey">&#x201D;</span>
         <span class="KeyboardKey">&#x091C;&#x094D;&#x091E;</span>
-        <span class="KeyboardKey">&#x0915;&#x094D;&#x0937;</span>
         <span class="KeyboardKey">&#x0924;&#x094D;&#x0930;</span>
+        <span class="KeyboardKey">&#x0915;&#x094D;&#x0937;</span>
         <span class="KeyboardKey">&#x0936;&#x094D;&#x0930;</span>
+        <span class="KeyboardKey">&#x090B;</span>
         <span class="KeyboardKey">(</span>
         <span class="KeyboardKey">)</span>
         <span class="KeyboardKey">?</span>
         <span class="KeyboardKey">:</span>
+        <span class="KeyboardKey bksp">Bksp</span>
     </div>
 
     <div class="KeyboardRow nonshift">
+        <span class="KeyboardKey tab">Tab</span>
         <span class="KeyboardKey">&#x094C;</span>
         <span class="KeyboardKey">&#x0948;</span>
         <span class="KeyboardKey">&#x093E;</span>
@@ -54,9 +58,11 @@
         <span class="KeyboardKey">&#x091C;</span>
         <span class="KeyboardKey">&#x0921;</span>
         <span class="KeyboardKey">&#x093C;</span>
+        <span class="KeyboardKey del">Del</span>
     </div>
 
     <div class="KeyboardRow shift">
+        <span class="KeyboardKey tab">Tab</span>
         <span class="KeyboardKey">&#x0914;</span>
         <span class="KeyboardKey">&#x0910;</span>
         <span class="KeyboardKey">&#x0906;</span>
@@ -69,6 +75,7 @@
         <span class="KeyboardKey">&#x091D;</span>
         <span class="KeyboardKey">&#x0922;</span>
         <span class="KeyboardKey">&#x0943;</span>
+        <span class="KeyboardKey del">Del</span>
     </div>
 
     <div class="KeyboardRow nonshift">
@@ -83,6 +90,8 @@
         <span class="KeyboardKey">&#x0924;</span>
         <span class="KeyboardKey">&#x091A;</span>
         <span class="KeyboardKey">&#x091F;</span>
+        <span class="KeyboardKey">&#x0949;</span>
+        <span class="KeyboardKey enter">Enter</span>
     </div>
     
     <div class="KeyboardRow shift">
@@ -98,6 +107,7 @@
         <span class="KeyboardKey">&#x091B;</span>
         <span class="KeyboardKey">&#x0920;</span>
         <span class="KeyboardKey">&#x0911;</span>
+        <span class="KeyboardKey enter">Enter</span>
     </div>
 
     <div class="KeyboardRow nonshift">
