Added space, fixed cursor position after combo characters like ksha

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <span class="KeyboardKey">&#x0932;</span>
         <span class="KeyboardKey">&#x0938;</span>
         <span class="KeyboardKey">&#x092F;</span>
-        <span class="KeyboardKey">.</span>
         <span class="KeyboardKey">,</span>
+        <span class="KeyboardKey">.</span>
         <span class="KeyboardKey shiftkey">Shift</span>
     </div>
 
@@ -145,7 +145,7 @@
     </div>
 
     <div class="KeyboardRow">
-        <span class="KeyboardKey clear">Clear</span>
+        <span class="KeyboardKey space">Space</span>
     </div>
 </div>
 </div>
