Added title and favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <meta charset="utf-8" /> 
 <link href="keyboard.css" rel="stylesheet" type="text/css">
 <script src="keyboard.js" type="text/javascript"></script>
+<link href="favicon.ico" rel="icon" type="image/x-icon" />
+<title>
+A custom Konkani keyboard
+</title>
 </head>
 <div class="center">
 <textarea id="typearea" class="typearea"></textarea>
