--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-<body>
 <head>
 <meta charset="utf-8" /> 
 <link href="keyboard.css" rel="stylesheet" type="text/css">
@@ -9,6 +8,9 @@
 A custom Konkani keyboard
 </title>
 </head>
+<body class="body">
+<header></header>
+<main class="content">
 <div class="center">
 <textarea id="typearea" class="typearea"></textarea>
 </div>
@@ -153,5 +155,11 @@ A custom Konkani keyboard
     </div>
 </div>
 </div>
+</main>
+<footer>
+<div class="center">
+<span class="footer-credits">Created and maintained by <a href="http://pranavashok.com">Pranav Ashok</a> | This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a> | </span>&nbsp;&nbsp;<iframe padding="0" margin ="10px" src="https://ghbtns.com/github-btn.html?user=pranavashok&repo=konkani-keyboard&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
+</div>
+</footer>
 </body>
 </html>
